--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,14 @@
 Package: broadbandR
-Title: What the Package Does (one line, title case)
+Title: An interface to the FCC's National Broadband Map API
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person("Sean", "Fischer", email = "sean.fischer@asc.upenn.edu", role = c("aut", "cre"))
+Description: Pull data for mobile broadband providers using the FCC's National Broadband Map API.
+URL: https://github.com/sf585978/broadbandR
 Depends: R (>= 3.5.1)
-License: What license is it under?
+Imports:
+  jsonlite,
+  tidyr
+License: GNU General Public License v3.0
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
